# Custom-Memory-Pool-Allocator-C-

./: CMakeLists.txt  README.md  main  main.cpp
custom_alloc_lib/: CMakeLists.txt  pool_alloc.h
